add some db utils